--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,3 +51,21 @@ body {
 .buttons:hover {
   cursor: pointer;
 }
+
+button {
+  margin-top: 8%;
+  background-color: mediumslateblue;
+  border: none;
+  color: black;
+  width: 10%;
+  padding: 15px 36px;
+  display: inline-block;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+form {
+  width: 40%;
+  height: 5%;
+  margin: 5% auto;
+}
